--- a/alembic.ini
+++ b/alembic.ini
@@ -1,9 +1,7 @@
 [alembic]
 script_location = alembic
 
-# Change this to your actual database URL
-sqlalchemy.url = mssql+pyodbc://sa:StrongPassword123!@localhost:1433/transferRoom?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes
-
+# Change this to your actual database U
 [loggers]
 keys = root,sqlalchemy,alembic
 
