--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main 
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -21,5 +22,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build -t suma1295/player-updater .
-          docker tag suma1295/player-updater sk1295/player-updater:latest
+          docker tag suma1295/player-updater suma1295/player-updater:latest
           docker push suma1295/player-updater:latest
