--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Docker Hub
 on:
   push:
     branches:
-      - main  # Triggers deployment only when pushing to the main branch
+      - main 
 
 jobs:
   build-and-push:
