--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -2,9 +2,12 @@ version: "3.8"
 
 services:
   player_updater:
+    container_name: player-updater-container 
     build: .
     restart: always
     ports:
-      - "8501:8501"
+      - "8501:8501"  
     volumes:
-      - .:/app
+      - .:/app  
+    environment:
+      - PYTHONUNBUFFERED=1 
