--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Print Docker Username (Debugging)
+        run: echo "Logging in with username: ${{ secrets.DOCKER_HUB_USERNAME }}"
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
