--- a/.github/workflows/deploy-new.yml
+++ b/.github/workflows/deploy-new.yml
@@ -3,7 +3,7 @@ name: Deploy to Docker Hub
 on:
   push:
     branches:
-      - main  # ✅ Runs the workflow when pushing to main branch
+      - main  # ✅ Runs the workflow when pushing to the main branch
 
 jobs:
   build-and-push:
@@ -13,8 +13,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Debugging - Check GitHub Actions Connection
-        run: echo "GitHub Actions Workflow is Running!"
+      # ✅ Debugging Step: Print Docker Username
+      - name: Debugging - Print Docker Username
+        run: echo "Using Docker Username:\${{ secrets.DOCKER_HUB_USERNAME }}"
+
+
+      # ✅ Debugging Step: Check if Secrets Exist
+      - name: Debugging - Test If Secrets Exist
+        run: |
+          if [[ -z "${{ secrets.DOCKER_HUB_USERNAME }}" ]]; then
+            echo "❌ ERROR: DOCKER_HUB_USERNAME is EMPTY!"
+            exit 1
+          else
+            echo "✅ SUCCESS: DOCKER_HUB_USERNAME is SET!"
+          fi
+
+          if [[ -z "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" ]]; then
+            echo "❌ ERROR: DOCKER_HUB_ACCESS_TOKEN is EMPTY!"
+            exit 1
+          else
+            echo "✅ SUCCESS: DOCKER_HUB_ACCESS_TOKEN is SET!"
+          fi
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
