--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -1,13 +1,23 @@
-version: "3.8"
-
 services:
-  player_updater:
-    container_name: player-updater-container  # Name of the container
-    build: .                                 # Build image from current directory
-    restart: always                          # Always restart container if it stops
+  airflow:
+    container_name: airflow_app
+    build: .
+    restart: always
     ports:
-      - "8501:8501"                         # Map host port 8501 to container port 8501
+      - "8080:8080"
     volumes:
-      - .:/app                              # Mount current directory to /app inside the container
+      - .:/app
     environment:
-      - PYTHONUNBUFFERED=1                  # Set environment variable for Python unbuffered output
+      - AIRFLOW_HOME=/app/airflow
+      - AIRFLOW__CORE__EXECUTOR=SequentialExecutor
+      - AIRFLOW__CORE__DAGS_FOLDER=/app/airflow/dags
+      - AIRFLOW__CORE__LOAD_EXAMPLES=False
+      - AIRFLOW__AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=mssql+pyodbc://sa:StrongPassword123@host.docker.internal:1433/airflowdb?driver=ODBC+Driver+17+for+SQL+Server
+
+      - PYTHONPATH=/app:/app/airflow:/app/python_code
+    command: >
+      bash -c "
+        airflow db migrate &&
+        airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password airflow123 &&
+        airflow scheduler & airflow webserver -p 8080
+      "
